opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Joe Hill"]
homepage: "https://github.com/roburio/udns"
bug-reports: "https://github.com/roburio/udns-client/issues"
dev-repo: "git+https://github.com/roburio/udns.git"
license: "BSD2"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build & >="1.5.1"}
  "ocaml" {>= "4.04.2"}
  "cstruct" {>= "3.1.1"}
  "fmt" {>= "0.8.4"}
  "logs" {>= "0.6.2"}
  "udns"
  "rresult" {>= "0.6.0"}
  "mirage-flow"
  "randomconv"
  "domain-name"
]
synopsis: "Pure DNS resolver API"
description: """
A pure resolver implementation using uDNS.
"""