opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/roburio/udns"
doc: "https://roburio.github.io/udns/doc"
dev-repo: "git+https://github.com/roburio/udns.git"
bug-reports: "https://github.com/roburio/udns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.04.0"}
  "udns"
  "udns-mirage"
  "udns-server"
  "udns-resolver"
  "mirage-time-lwt"
  "mirage-clock-lwt"
  "mirage-random"
  "lwt"
  "randomconv"
  "duration"
  "mirage-stack-lwt"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "DNS caching resolver for MirageOS"
description: """
A caching DNS resolver for MirageOS.
"""
