opam-version: "2.0"
maintainer: "team AT robur dot io"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/roburio/udns"
doc: "https://roburio.github.io/udns/doc"
dev-repo: "git+https://github.com/roburio/udns.git"
bug-reports: "https://github.com/roburio/udns/issues"
license: "BSD2"

depends: [
  "dune" {build & >= "1.2.0"}
  "ocaml" {>= "4.07.0"}
  "udns"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "Zonefile parser for uDNS"
description: """
An ocamllex and ocamlyacc based zonefile parser to be used with udns.
"""
